--- a/styles.css
+++ b/styles.css
@@ -4,17 +4,28 @@ body {
     margin: 0;
     overflow: hidden;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
+    gap: 50px;
+    font-family: 'Baskerville', 'Palatino', serif;
 }
 
-.container {
+.card-container {
     background-color: #8E9AAF;
     display: grid;
     grid-template-columns: 2fr 0fr 3fr;
     width: 50%;
     height: 50vh;
     border-radius: 20px;
+}
+
+.back-content {
+    background-color: #8E9AAF;
+    width: 50%;
+    height: 50vh;
+    border-radius: 20px;
+    align-items: start;
 }
 
 .container:hover {
@@ -38,10 +49,70 @@ body {
     
 }
 
+.information p {
+    padding: 0px 20px;
+}
+
 .divider {
     width: 1px;
     background-color: transparent;
     border-left: 2px dotted white;
     height: 95%;
     align-self: center;
+}
+
+.front-back {
+    display: flex;
+    justify-content: center;
+    gap: 15px;
+}
+
+.front, .back{
+    background-color: #8E9AAF;
+    border: none;
+    border-radius: 15px;
+    height: 36px;
+    width: 90px;
+}
+
+.front:hover, .back:hover {
+    box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.15);
+}
+
+.front.active {
+    background-color: #6A7185;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.back.active {
+    background-color: #6A7185;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.randomFact {
+    background-color: #6A7185;
+    display: flex;
+    width: 575px;
+    height: 280px;
+    border-radius: 30px;
+    align-self: center;
+    justify-self: center;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+    padding: 0px 10px;
+}
+
+.randomize {
+    background-color: #6A7185;
+    border: none;
+    border-radius: 15px;
+    height: 36px;
+    width: 90px;
+    margin-bottom: 40px;
+    margin-top: 20px;
+}
+
+.randomize:hover {
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
